force-app/main/default/objects/Alliance_Partner_Account_Mapping__mdt/Alliance_Partner_Account_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This is a mapping between alliance partner name and account id and is used for Deal Registration association.</description>
    <label>Alliance Partner Account Mapping</label>
    <pluralLabel>Alliance Partner Account Mappings</pluralLabel>
</CustomObject>