force-app/main/default/objects/Alliance_Partner_Account_Mapping__mdt/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>