force-app/main/default/objects/Alliance_Partner_Account_Mapping__mdt/fields/Alliance_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Account_Name__c</fullName>
    <label>Alliance Account Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>